# mcumgr-mac

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cache.rs  cli.rs  error.rs  help.rs  image.rs  lib.rs  main.rs  transport.rs  ui.rs
src/commands/: discover.rs  image.rs  mod.rs  os.rs
src/smp/: groups.rs  messages.rs  mod.rs
