[package]
name = "mcumgr-mac"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI for managing MCUmgr/SMP devices over Bluetooth Low Energy"
license = "MIT"

[[bin]]
name = "mcumgr-mac"
path = "src/main.rs"

[lib]
name = "mcumgr_mac"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
futures = "0.3"
# Bluetooth Low Energy (CoreBluetooth on macOS)
btleplug = "0.11"
uuid = "1"
# CBOR + serialization
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
# Hashing / hex
sha2 = "0.10"
hex = "0.4"
# UX
indicatif = "0.17"
console = "0.15"
comfy-table = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Errors
anyhow = "1"
thiserror = "1"
# Paths + time
directories = "5"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known", "macros"] }
